# kb-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_ci.yml
migrations/: 1_schema.sql
src/: bin.rs  lib.rs  main.rs
