[package]
name = "kb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-test = "14.2.2"
hyper = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"
tokio = "1.28.2"
tracing = "0.1.40"

[dev-dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
