[package]
name = "kb"
version = "0.1.0"
edition = "2021"

[lib]
name = "kbrust"
path = "src/lib.rs"

[[bin]]
name = "kb"
path = "src/bin.rs"

[dependencies]
axum = "0.7.7"
axum-test = "16.2.0"
hyper = "1.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.118"
sqlx = "0.8.2"
tokio = "1.40.0"
tracing = "0.1.40"
#Shuttle related dependencies
shuttle-runtime = "0.48.0"
shuttle-axum = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
time = "0.3.36"

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
